schaefer/ext_ptseries/logs/cleanup_amps1504749.err
ls: cannot access 'MATLAB/d*': No such file or directory
  File "/scratch/tyoeasley/brain_representations/src_py/comp_amps.py", line 52
    main(parent_dir, out_dir, dim_subdirs=dim_subdirs, subj_flist=subj_flist):
                                                                             ^
SyntaxError: invalid syntax
